fix(frontend): We can only see the end of the content title if too big in rtl
Issue ref: #5533 
PR ref: #5548

--- a/frontend/src/component/FeedItem/FeedItemHeader.styl
+++ b/frontend/src/component/FeedItem/FeedItemHeader.styl
@@ -9,6 +9,8 @@
   &__icon
     font-size bigIconSize
     margin-inline-end standardSpacing
+  &__label
+    display flex
   &__title
     margin-inline-end auto
     white-space nowrap
